# moosefs

./: .gitignore  .mcp.json  .windsurfrules  CLI_BENCHMARK_INTEGRATION.md  DEMO_SCRIPTS_REFACTORING.md  Dockerfile.debian-builder  Dockerfile.ipv6  HA.md  IPv6_SUPPORT.md  METADATA_CACHE_METRICS_INTEGRATION.md  MOOSENG_DEMO_README.md  MOOSENG_DEMO_STATUS.md  MOOSENG_MASTER_CLIENT_STATE.md  Makefile  Makefile.in  PARALLEL_COORDINATION_STATUS.md  PARALLEL_HEALTH_CHECK_OPTIMIZATION.md  README.md  TIERED_STORAGE_IMPLEMENTATION.md  aclocal.m4  build-debian-packages.sh  build-ipv6.sh  config.h  config.h.in  config.status  configure  configure.ac  configure~  docker-compose.debian-builder.yml  docker-compose.ipv6.yml  docker-compose.optimized.yml  docker-compose.yml  libtool  mooseng-demo-lib.sh  package-lock.json  prompt.txt  start-mock-demo.sh  start-mooseng-demo.sh  start-mooseng.sh  start-parallel-demo.sh  (+4 more)
mfsmaster/ha/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  ha_manager.c  ha_manager.h  mfs_ha.c  mfs_ha.h  mfs_ha_cgi.c  mfs_ha_integration.c  raft.c  raft.h  replication.c  replication.h
mooseng/: ACHIEVEMENT_SUMMARY.md  AUTOMATED_DEMO_REVIEW.md  BENCHMARKING_ACHIEVEMENT_SUMMARY.md  BENCHMARKING_FRAMEWORK.md  BENCHMARKING_STATUS.md  CLI_BENCHMARK_INTEGRATION.md  COMPREHENSIVE_BENCHMARK_REPORT.md  COORDINATION.md  COORDINATION_STATUS.json  COORDINATION_STATUS.md  Cargo.toml  DEMO_README.md  DEMO_SCRIPT_IMPROVEMENTS.md  DEPLOYMENT.md  DOCKER_COMPOSE_IMPROVEMENTS.md  DOCKER_DEMO_README.md  DOCKER_DEPLOYMENT.md  DOCKER_SETUP_SUMMARY.md  ERROR_ANALYSIS.md  HTML_REPORT_ACHIEVEMENT_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INSTANCE_DELEGATION.md  INSTANCE_WORK_SUMMARY.md  INTEGRATION_TEST_PLAN.md  Makefile  README.md  START_UNIFIED_DEMO_DOCUMENTATION.md  STATUS_PROGRESS_REPORT.md  STATUS_SUMMARY.md  UNIFIED_CLUSTER_README.md  UNIFIED_DEMO_README.md  VIDEO_DEMO_SCRIPT.md  VIDEO_RECORDING_GUIDE.md  analyze_errors.sh  automated-demo-enhanced.sh  automated-demo.sh  build-docker-services.sh  build-for-docker.sh  build_and_test.sh  coordination_script.py  (+46 more)
mooseng/.github/workflows/: benchmarks.yml  ci.yml  release.yml
mooseng/benchmark_results/20250531_155049/: REPORT.md  performance_results.json
mooseng/benchmark_results/20250531_155246/: REPORT.md  performance_results.json  performance_test.sh
mooseng/benchmark_results/20250531_155418/: REPORT.md  performance_results.json
mooseng/dashboard/: .eslintrc.js  README.md  package.json  serve.sh  test-dashboard.html  test.html
mooseng/dashboard/public/: index.html
mooseng/dashboard/src/: ApiClient.js  BenchmarkIntegration.js  DataService.js
mooseng/docker/: Dockerfile.chunkserver  Dockerfile.cli  Dockerfile.client  Dockerfile.master  Dockerfile.metalogger  Dockerfile.mock-chunkserver  Dockerfile.mock-client  Dockerfile.mock-master  build-mooseng.sh  build.sh  docker-compose.yml
mooseng/docker/configs/: chunkserver.toml  cli.toml  client.toml  master.toml  metalogger.toml
mooseng/docker/mock-services/: chunkserver-mock.py  client-mock.py  master-mock.py
mooseng/docker/prometheus/: prometheus-multiregion.yml  prometheus.yml
mooseng/docker/scripts/: chunkserver-entrypoint.sh  cli-entrypoint.sh  client-entrypoint.sh  master-entrypoint.sh  metalogger-entrypoint.sh
mooseng/examples/: advanced_networking_example.rs  tls_example.rs
mooseng/helm/mooseng/: Chart.yaml  values.yaml
mooseng/html_reports/: index.html
mooseng/k8s/: chunkserver-daemonset.yaml  enhanced-deployment.yaml  master-statefulset.yaml  namespace.yaml  validate.sh
mooseng/lib/: common-functions.sh
mooseng/mooseng-benchmarks/: Cargo.toml
mooseng/mooseng-benchmarks/benches/: comparison.rs  file_operations.rs  metadata_operations.rs  multiregion.rs  network_file_operations.rs  network_simulation.rs
mooseng/mooseng-benchmarks/src/: analysis.rs  config.rs  database.rs  html_report.rs  lib.rs  metrics.rs  report.rs  test_framework.rs  utils.rs
mooseng/mooseng-benchmarks/static/: index.html
mooseng/mooseng-chunkserver/: Cargo.toml
mooseng/mooseng-chunkserver/examples/: tiered_storage_example.rs
mooseng/mooseng-chunkserver/src/: benchmarks.rs  block_allocator.rs  cache.rs  chunk.rs  compression_service.rs  config.rs  erasure.rs  erasure_storage.rs  error.rs  grpc_server.rs  health_checker.rs  integrity.rs  lib.rs  main.rs  metrics.rs  mmap.rs  object_storage.rs  placement.rs  scrubber.rs  server.rs  storage.rs  tier_movement.rs  tiered_storage.rs  tiered_storage_demo.rs  tiered_storage_integration.rs  zero_copy.rs
mooseng/mooseng-cli/: Cargo.toml
mooseng/mooseng-cli/docs/: CLI_ARCHITECTURE.md  CLI_USER_GUIDE.md
mooseng/mooseng-cli/src/: admin.rs  benchmark.rs  cluster.rs  config.rs  data.rs  grpc_client.rs  health.rs  main.rs  monitoring.rs
mooseng/mooseng-client/: Cargo.toml
mooseng/mooseng-client/src/: cache.rs  config.rs  error.rs  filesystem.rs  health_checker.rs  health_endpoints.rs  health_integration.rs  lib.rs  master_client.rs  metrics.rs  mooseng-mount.rs
mooseng/mooseng-client/tests/: integration_tests.rs
mooseng/mooseng-common/: COMPILATION_FIXES_REPORT.md  Cargo.toml
mooseng/mooseng-common/benches/: async_runtime_bench.rs
mooseng/mooseng-common/examples/: async_runtime_example.rs
mooseng/mooseng-common/src/: async_runtime.rs  async_runtime_docs.md  compression.rs  config.rs  error.rs  health.rs  lib.rs  metrics.rs  metrics_server.rs  networking.rs  types.rs
mooseng/mooseng-common/tests/: async_runtime_integration.rs
mooseng/mooseng-master/: Cargo.toml
mooseng/mooseng-master/benches/: cache_benchmarks.rs  cache_performance.rs  (+2 more)
mooseng/mooseng-metalogger/: Cargo.toml
mooseng/mooseng-protocol/: Cargo.toml  build.rs
mooseng/perf_demo/: Cargo.toml
mooseng/scripts/: analyze_performance.py  prd.txt  run_multiregion_benchmarks.sh  task-complexity-report.json
mooseng/src/: lib.rs
mooseng/test_configs/: benchmark_config.toml  test_chunkserver.toml  test_client.toml  test_master.toml
mooseng/tests/: integration_framework.rs  integration_tests.rs
mooseng/unified_dashboard/: README.md  dashboard.db  server.py
(+750 files in other folders)
