[workspace]
members = [
    "mooseng-common",
    "mooseng-protocol",
    "mooseng-master",
    "mooseng-chunkserver",
    "mooseng-client", 
    "mooseng-metalogger",
    "mooseng-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MooseNG Contributors"]
license = "GPL-3.0"
repository = "https://github.com/mooseng/mooseng"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# gRPC and protobuf
tonic = { version = "0.12", features = ["tls"] }
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"
prost-build = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = { version = "0.13", features = ["process"] }

# Storage
rocksdb = "0.22"
sled = "0.34"

# Networking
hyper = { version = "1.4", features = ["full"] }
tower = "0.4"
quinn = "0.11"

# Cryptography
rustls = "0.23"
ring = "0.17"

# Data structures
bytes = "1.7"
dashmap = "6.0"
crossbeam = "0.8"
indexmap = "2.2"
bitvec = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
config = "0.14"

# File system
nix = "0.29"
libc = "0.2"
fuser = "0.14"
memmap2 = "0.9"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
futures-util = "0.3"
lru = "0.12"
rand = "0.8"
num_cpus = "1.16"
glob = "0.3"

# Checksums and hashing
blake3 = "1.5"
crc32fast = "1.4"
hex = "0.4"

# Erasure coding
reed-solomon-erasure = { version = "6.0", features = ["simd-accel"] }

# Testing
criterion = "0.5"
proptest = "1.5"
quickcheck = "1.0"
tempfile = "3.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
