[package]
name = "mooseng-master"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mooseng-common = { path = "../mooseng-common" }
mooseng-protocol = { path = "../mooseng-protocol" }

# Async runtime
tokio = { workspace = true, features = ["full"] }
async-stream = "0.3"

# gRPC
tonic = { workspace = true }
prost = { workspace = true }

# Storage
sled = { workspace = true }
bincode = { workspace = true }

# Logging and monitoring
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Configuration
config = { workspace = true }
clap = { workspace = true }

# Utilities
bytes = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
rand = { workspace = true }
glob = "0.3"

# Networking
hyper = { workspace = true }
tower = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }

[[bin]]
name = "mooseng-master"

[[bench]]
name = "raft_benchmarks"
harness = false
