[package]
name = "mooseng-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["client", "server"]
client = []
server = []
reflection = ["tonic-reflection"]

[dependencies]
mooseng-common = { path = "../mooseng-common" }

# gRPC and protobuf
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-reflection = { version = "0.12", optional = true }

# Async runtime
tokio = { workspace = true, features = ["sync", "macros"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
bytes = { workspace = true }
futures = { workspace = true }

# Logging
tracing = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
prost-build = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
tower = { workspace = true }

[lib]
name = "mooseng_protocol"
